manifest/objects/Apttus__TempObject__c.object
<CustomObject>
    <description>A container for temporary objects and attachments</description>
    <fields>
        <fullName>Apttus__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement</description>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Previews</relationshipLabel>
        <relationshipName>TempObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__ContentType__c</fullName>
        <description>The document content type</description>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__CustomObjectId__c</fullName>
        <description>ID of the associated custom object</description>
        <inlineHelpText>ID of the associated custom object</inlineHelpText>
        <label>Custom Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The object description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__DeveloperName__c</fullName>
        <description>Unique name</description>
        <inlineHelpText>Unique name</inlineHelpText>
        <label>DeveloperName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus__DocumentExpiryDate__c</fullName>
        <description>Date to store the expiry date of documents linked to temp object</description>
        <inlineHelpText>Date to store the expiry date of documents linked to temp object</inlineHelpText>
        <label>Document Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentLink__c</fullName>
        <description>The hyperlink to the document associated with the object</description>
        <formula>IF (LEN(Apttus__DocumentUrl__c) &gt; 0,HYPERLINK(Apttus__DocumentUrl__c, $Label.apttus__View , &quot;_blank&quot;),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentUrl__c</fullName>
        <description>The url of the document associated with the object</description>
        <label>Document Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Apttus__TemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated template</description>
        <label>Template</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Temp Objects</relationshipLabel>
        <relationshipName>TempObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Title__c</fullName>
        <description>The document title</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Temp Object (Comply)</label>
    <nameField>
        <displayFormat>TMP-{0000}</displayFormat>
        <label>Temp Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>